force-app/main/default/objects/Subscription_Team_Member__c/Subscription_Team_Member__c.object-meta.xml
<CustomObject>
    <description>This object represents the team members associated with a subscription.</description>
    <label>Product Customer Team Member</label>
    <nameField>
        <displayFormat>STM-{0000000}</displayFormat>
        <label>Subscription Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Customer Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>