force-app/main/default/objects/Subscription_Team_Member__c/fields/Est_Remediation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Est_Remediation_Hours__c</fullName>
    <label>Est. Remediation Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>