force-app/main/default/objects/Subscription_Team_Member__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Product Customer</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipName>Subscription_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>